overflow fix

--- a/style.css
+++ b/style.css
@@ -27,17 +27,17 @@
   font-family: 'Rubik';
 }
 
-::-webkit-scrollbar {
+body::-webkit-scrollbar {
   width: 8px; 
   background-color: #F2F2F2;
 }
 
-::-webkit-scrollbar-thumb {
+body::-webkit-scrollbar-thumb {
   background-color: #BDBDBD;
   border-radius: 10px;
 }
 
-::-webkit-scrollbar-track {
+body::-webkit-scrollbar-track {
   background-color: #F2F2F2;
 }
 
